--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "hello": "echo Lefutott egy parancs!!!",
-    "start": "nodemon index.js"
+    "start": "./node_modules/.bin/nodemon -r dotenv/config index.js"
   },
   "repository": {
     "type": "git",
@@ -19,17 +19,23 @@
   },
   "homepage": "https://github.com/Danee187/NodeJs-practice#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "helmet": "^3.15.0"
+    "helmet": "^3.15.0",
+    "joi": "^14.3.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^6.2.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
+    "loadenv": "^2.2.0",
     "nodemon": "^1.18.9"
   }
 }
