--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "hello": "echo Lefutott egy parancs!!!",
-    "start": "./node_modules/.bin/nodemon -r dotenv/config index.js"
+    "start": "./node_modules/.bin/nodemon -r dotenv/config src/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "joi": "^14.3.1",
+    "mongodb": "^3.1.12",
     "winston": "^3.1.0"
   },
   "devDependencies": {
