--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CURRENCY_API_KEY=9ad4e5b0
 LOG_LEVEL=debug
 DB_URI=mongodb://dbuser:password123@ds159624.mlab.com:59624/hwsw
+JWT_SECRET=VERY_SECRET
