--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.12",
     "winston": "^3.1.0"
   },
